# app/Http/Controllers/Admin/CourseTeacher/CreateCourseTeacherAttendanceController.php
@@ -3,17 +3,17 @@
 namespace App\Http\Controllers\Admin\CourseTeacher;
 
 use App\Data\Admin\CourseTeacher\CreateCourseTeacherAttendance\Request\CreateCourseTeacherAttendanceRequestData;
-use App\Data\Admin\CourseTeacher\CreateCourseTeacherAttendance\Request\StudentAttendanceData as RequestStudentAttendanceData;
 use App\Data\Shared\Swagger\Parameter\QueryParameter\QueryParameter;
 use App\Data\Shared\Swagger\Request\JsonRequestBody;
 use App\Data\Shared\Swagger\Response\SuccessNoContentResponse;
-use App\Http\Controllers\Admin\CourseTeacher\Abstract\CourseTeacherAttendanceController;
-use App\Models\CourseTeacher;
+use App\Http\Controllers\Admin\CourseTeacher\Abstract\CourseTeacherLecturesController;
+use App\Models\Lecture;
+use DB;
 use OpenApi\Attributes as OAT;
 
-class CreateCourseTeacherAttendanceController extends CourseTeacherAttendanceController
+class CreateCourseTeacherAttendanceController extends CourseTeacherLecturesController
 {
-    #[OAT\Post(path: '/admins/course-teachers/course-attendances', tags: ['adminsCourseTeachers'])]
+    #[OAT\Post(path: '/admins/course-teachers/{id]/lectures', tags: ['adminsCourseTeachers'])]
     #[QueryParameter('date')]
     #[JsonRequestBody(CreateCourseTeacherAttendanceRequestData::class)]
     #[SuccessNoContentResponse]
@@ -24,21 +24,30 @@ class CreateCourseTeacherAttendanceController extends CourseTeacherAttendanceCon
 
         $request
             ->students_attendance
-            ->each(function (RequestStudentAttendanceData $attendance) use (&$attendace_attach_data, $request) {
+            ->each(function ($attendance) use (&$attendace_attach_data) {
                 $attendace_attach_data[$attendance->id] =
                     [
                         'is_student_present' => $attendance->is_present,
-                        'date' => $request->date,
                     ];
             });
 
-        CourseTeacher::query()
-            ->firstWhere(
-                'id',
-                $request->id
-            )
-            ->studenAttendances()
-            ->attach($attendace_attach_data);
+        DB::transaction(function () use ($request, $attendace_attach_data) {
+
+            $new_lecture = Lecture::create([
+                'happened_at' => $request->happened_at,
+            ]);
+
+            Lecture::query()
+                ->whereRelation(
+                    'courseTeacher',
+                    'id',
+                    $request->id
+                )
+                ->first()
+                ->students()
+                ->attach($attendace_attach_data);
+
+        });
 
     }
 }
